blockml/test/errors/02_field/e269/e269.view
view: e269
table: 1
fields:
- dimension: dim1
  result: string
  currency_prefix: 'usd'
  sql: abc


